--- a/store/blocks/global/components/PDP/disclosure/product-disclosure-info.jsonc
+++ b/store/blocks/global/components/PDP/disclosure/product-disclosure-info.jsonc
@@ -1,11 +1,13 @@
 {
   "flex-layout.col#disclosure__product-info": {
+    "title": "disclosure product details",
     "children": ["disclosure-layout-group#product-info"],
     "props": {
       "blockClass": "disclosure__product-info"
     }
   },
   "disclosure-layout-group#product-info": {
+    "title": "disclosure content",
     "children": [
       "disclosure-layout#product-info__description",
       "disclosure-layout#product-info__features",
@@ -15,6 +17,7 @@
     ]
   },
   "disclosure-layout#product-info__description": {
+    "title": "trigger content description",
     "children": [
       "disclosure-trigger#product-info__description",
       "disclosure-content#product-info__description"
@@ -27,6 +30,7 @@
     "children": ["flex-layout.row#description__tilte"]
   },
   "flex-layout.row#description__tilte": {
+    "title": "content",
     "children": [
       "rich-text#description__title",
       "disclosure-state-indicator#product-info"
@@ -38,20 +42,24 @@
     }
   },
   "rich-text#description__title": {
+    "title": "title",
     "props": {
       "text": "DESCRIPCIÓN"
     }
   },
   "disclosure-content#product-info__description": {
+    "title": "disclosure conten",
     "children": ["flex-layout.row#description__content"],
     "props": {
       "blockClass": "disclosure-content"
     }
   },
   "flex-layout.row#description__content": {
+    "title": "description",
     "children": ["product-description"]
   },
   "disclosure-layout#product-info__features": {
+    "title": "trigger content features",
     "children": [
       "disclosure-trigger#product-info__features",
       "disclosure-content#product-info__features"
@@ -61,9 +69,11 @@
     }
   },
   "disclosure-trigger#product-info__features": {
+    "title": "features",
     "children": ["flex-layout.row#features__title"]
   },
   "flex-layout.row#features__title": {
+    "title": "content",
     "children": [
       "rich-text#features__title",
       "disclosure-state-indicator#product-info"
@@ -75,14 +85,17 @@
     }
   },
   "rich-text#features__title": {
+    "title": "title",
     "props": {
       "text": "CARACTERÍSTICAS"
     }
   },
   "disclosure-content#product-info__features": {
+    "title": "disclosure conten",
     "children": ["flex-layout.row#features__content"]
   },
   "flex-layout.row#features__content": {
+    "title": "features content",
     "children": ["product-specification-group#features__content"]
   },
   "product-specification-group#features__content": {
@@ -116,6 +129,7 @@
     }
   },
   "disclosure-layout#product-info__shipping-policies": {
+    "title": "trigger content shipping policies",
     "children": [
       "disclosure-trigger#product-info__shipping-policies",
       "disclosure-content#product-info__shipping-policies"
@@ -128,6 +142,7 @@
     "children": ["flex-layout.row#shipping-policies__title"]
   },
   "flex-layout.row#shipping-policies__title": {
+    "title": "content",
     "children": [
       "rich-text#shipping-policies__title",
       "disclosure-state-indicator#product-info"
@@ -139,19 +154,23 @@
     }
   },
   "rich-text#shipping-policies__title": {
+    "title": "title",
     "props": {
       "text": "POLÍTICAS DE ENVÍO"
     }
   },
   "disclosure-content#product-info__shipping-policies": {
+    "title": "disclosure conten",
     "children": ["rich-text#shipping-policies__info"]
   },
   "rich-text#shipping-policies__info": {
+    "title": "policies",
     "props": {
       "text": "El tiempo de entrega empezará a contar a partir de la confirmación exitosa del pago, que recibirás en el correo electrónico con el cual realizaste tu compra."
     }
   },
   "disclosure-layout#product-info__care": {
+    "title": "trigger content care",
     "children": [
       "disclosure-trigger#product-info__care",
       "disclosure-content#product-info__care"
@@ -164,6 +183,7 @@
     "children": ["flex-layout.row#care__title"]
   },
   "flex-layout.row#care__title": {
+    "title": "content",
     "children": [
       "rich-text#care__title",
       "disclosure-state-indicator#product-info"
@@ -175,19 +195,23 @@
     }
   },
   "rich-text#care__title": {
+   "title": "title",
     "props": {
       "text": "CUIDADOS"
     }
   },
   "disclosure-content#product-info__care": {
+    "title": "disclosure conten",
     "children": ["rich-text#care__info"]
   },
   "rich-text#care__info": {
+    "title": "care",
     "props": {
       "text": "**qui va algo**"
     }
   },
   "disclosure-layout#product-info__care-instructions": {
+    "title": "trigger content care instructions",
     "children": [
       "disclosure-trigger#product-info__care-instructions",
       "disclosure-content#product-info__care-instructions"
@@ -200,6 +224,7 @@
     "children": ["flex-layout.row#care-instructions__title"]
   },
   "flex-layout.row#care-instructions__title": {
+    "title": "content",
     "children": [
       "rich-text#care-instructions__title",
       "disclosure-state-indicator#product-info"
@@ -211,14 +236,17 @@
     }
   },
   "rich-text#care-instructions__title": {
-    "props": {
+   "title": "title",
+   "props": {
       "text": "INSTRUCCIONES DE CUIDADO"
     }
   },
   "disclosure-content#product-info__care-instructions": {
+    "title": "disclosure conten",
     "children": ["rich-text#care-instructions__info"]
   },
   "rich-text#care-instructions__info": {
+    "title": "care instruction",
     "props": {
       "text": "Las marcas en el cuero son únicas, le dan carácter y personalidad a cada pieza. Para su limpieza, usar un paño suave humedecido con agua y jabón de tocador, frotar suavemente y remover con cuidado. Evitar el contacto con superficies abrasivas. Se recomienda guardar el producto en una bolsa de tela para evitar humedad o acumulación de polvo. No aplicar perfume directamente sobre los productos de cuero para evitar manchas irreversibles y daños en el acabado"
     }
