--- a/store/blocks/global/components/PDP/product-breadcrumb.jsonc
+++ b/store/blocks/global/components/PDP/product-breadcrumb.jsonc
@@ -1,5 +1,6 @@
 {
   "flex-layout.row#product__breadcrumb": {
+    "title": "breadcrumb",
     "children": ["breadcrumb"],
     "props": {
       "marginTop": 8
