--- a/store/blocks/desktop/components/header/minicart/header-minicart.jsonc
+++ b/store/blocks/desktop/components/header/minicart/header-minicart.jsonc
@@ -1,5 +1,6 @@
 {
-  "minicart.v2#header__bottom--minicat": {
+  "minicart.v2#container-minicart__minicart": {
+    "title": "minicart",
     "children": ["minicart-base-content"],
     "props": {
       "variation": "popup",
@@ -15,20 +16,21 @@
     }
   },
   "minicart-base-content": {
+    "title": "minicart base content",
     "blocks": ["minicart-empty-state"],
-    "children": ["minicart-product-list", "flex-layout.row#minicart-footer"]
+    "children": ["minicart-product-list", "flex-layout.row#minicart__footer"]
   },
   "minicart-product-list": {
     "blocks": ["product-list#minicart"]
   },
-  "flex-layout.row#minicart-footer": {
-    "children": ["flex-layout.col#minicart-footer"],
+  "flex-layout.row#minicart__footer": {
+    "children": ["flex-layout.col#minicart__footer"],
     "props": {
       "preventVerticalStretch": true,
       "paddingBottom": 9
     }
   },
-  "flex-layout.col#minicart-footer": {
+  "flex-layout.col#minicart__footer": {
     "children": ["minicart-summary", "minicart-checkout-button"],
     "props": {
       "rowGap": 2
@@ -55,9 +57,11 @@
     "children": ["flex-layout.row#empty-state"]
   },
   "flex-layout.row#empty-state": {
+    "title": "empty-state",
     "children": ["flex-layout.col#empty-estate"]
   },
   "flex-layout.col#empty-estate": {
+    "title": "empty-state content",
     "children": [
       "icon-cart#minicart-empty-state",
       "rich-text#minicart-empty-state"
@@ -68,6 +72,7 @@
     }
   },
   "rich-text#minicart-empty-state": {
+    "title": "empty-state text",
     "props": {
       "text": "**Tu carrito esta vacio**"
     }
