feat(<home banner mobile desing>)<--Adds banners mobile design and rename to components responseive-layout-->

--- a/store/blocks/desktop/screen/home/home-responsive-layout.desktop.jsonc
+++ b/store/blocks/desktop/screen/home/home-responsive-layout.desktop.jsonc
@@ -1,5 +1,5 @@
 {
-  "responsive-layout.desktop#home__layout--desktop": {
+  "responsive-layout.desktop": {
     "title": "home desktop",
     "children": [
     ]
