--- a/store/blocks/pages/our-legacy.jsonc
+++ b/store/blocks/pages/our-legacy.jsonc
@@ -1,6 +1,10 @@
 {
   "store.custom#our-legacy": {
     "title": "our legacy page",
-    "blocks": ["flex-layout.row#global__our-legacy--container"]
+    "blocks": [
+      "responsive-layout.desktop#custom-page__our-legacy",
+      "responsive-layout.phone#custom-page__our-legacy",
+      "responsive-layout.tablet#custom-page__our-legacy"
+    ]
   }
 }
